Aqui se obtienen los datos

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,3 +1,24 @@
+<div class="row">
+  <div class="col-lg-4">
+    <h3 style="text-align: center">Seleccione sucursal</h3>
+      <select name="" id="" class="form-control">
+        <option value="" hidden>SUCURSALES</option>
+      </select>
+  </div>
+  <div class="col-lg-4">
+    <h3 style="text-align: center">Fecha desde</h3>
+    <input type="date" name="" id="" class="form-control">
+    <h3 style="text-align: center">Origen</h3>
+    <input type="text" name="" id="" class="form-control">
+  </div>
+  <div class="col-lg-4">
+    <h3 style="text-align: center">Fecha hasta</h3>
+    <input type="date" name="" id="" class="form-control">
+    <h3 style="text-align: center">Destino</h3>
+    <input type="text" name="" id="" class="form-control">
+  </div>
+</div>
+<br><br>
 <table class="table">
   <thead>
     <tr>
